kubecost-cel/require-kubecost-labels/.chainsaw-test/podcontroller-bad.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: baddeploy01
spec:
  replicas: 1
  selector:
    matchLabels:
      foo: bar
  template:
    metadata:
      labels:
        foo: bar
    spec:
      containers:
      - name: busybox
        image: busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: baddeploy02
spec:
  replicas: 1
  selector:
    matchLabels:
      owner: "foo"
  template:
    metadata:
      labels:
        owner: "foo"
    spec:
      containers:
      - name: busybox
        image: busybox:1.35
