kubecost-cel/require-kubecost-labels/.chainsaw-test/podcontroller-good.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: gooddeploy01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
        owner: "foo"
        team: "foo"
        department: "foo"
        env: "foo"
    spec:
      containers:
      - name: busybox
        image: busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: gooddeploy02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
        owner: "foo"
        team: "foo"
        department: "foo"
        env: "foo"
        foo: bar
    spec:
      containers:
      - name: busybox
        image: busybox:1.35
